--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./logo-meu-rebanho.ico" />
+  <link rel="icon" href="./static/icons/logo-meu-rebanho.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="./logo-meu-rebanho.ico" />
+  <link rel="apple-touch-icon" href="../src/assets/heads-black-white-holstein-cows.jpg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Meu Rebanho</title>
